<resources>
    <string name="app_name">Level2Project</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="patronymic">Patronymic</string>
    <string name="position">Position</string>
    <string name="dept">Department</string>
    <string name="done">Done</string>
    <string name="next_img">Next Image</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="sort">Sort</string>
    <string name="by_surname">Sort by surname</string>
    <string name="by_department">Sort by department</string>
</resources>